@@ -7,8 +7,6 @@ import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
 import site.mymeetup.meetupserver.common.service.S3ImageService;
-import site.mymeetup.meetupserver.crew.dto.CrewDto;
-import site.mymeetup.meetupserver.crew.dto.CrewMemberDto;
 import site.mymeetup.meetupserver.crew.entity.Crew;
 import site.mymeetup.meetupserver.crew.entity.CrewMember;
 import site.mymeetup.meetupserver.crew.repository.CrewMemberRepository;
@@ -23,10 +21,13 @@ import site.mymeetup.meetupserver.interest.repository.InterestBigRepository;
 import site.mymeetup.meetupserver.interest.repository.InterestSmallRepository;
 import site.mymeetup.meetupserver.member.entity.Member;
 import site.mymeetup.meetupserver.member.repository.MemberRepository;
+import static site.mymeetup.meetupserver.crew.dto.CrewDto.CrewSaveReqDto;
+import static site.mymeetup.meetupserver.crew.dto.CrewDto.CrewSaveRespDto;
+import static site.mymeetup.meetupserver.crew.dto.CrewDto.CrewSelectRespDto;
+import static site.mymeetup.meetupserver.crew.dto.CrewMemberDto.CrewMemberSelectRespDto;
 
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -40,7 +41,7 @@ public class CrewServiceImpl implements CrewService {
     private final CrewMemberRepository crewMemberRepository;
 
     // 모임 등록
-    public CrewDto.CrewSaveRespDto createCrew(CrewDto.CrewSaveReqDto crewSaveReqDto, MultipartFile image) {
+    public CrewSaveRespDto createCrew(CrewSaveReqDto crewSaveReqDto, MultipartFile image) {
         // geoId로 Geo 객체 조회
         Geo geo = geoRepository.findById(crewSaveReqDto.getGeoId())
                 .orElseThrow(() -> new CustomException(ErrorCode.GEO_NOT_FOUND));
@@ -85,11 +86,11 @@ public class CrewServiceImpl implements CrewService {
                 .build();
         crewMemberRepository.save(crewMember);
 
-        return CrewDto.CrewSaveRespDto.builder().crew(crew).build();
+        return CrewSaveRespDto.builder().crew(crew).build();
     }
 
     // 모임 수정
-    public CrewDto.CrewSaveRespDto updateCrew(Long crewId, CrewDto.CrewSaveReqDto crewSaveReqDto, MultipartFile image) {
+    public CrewSaveRespDto updateCrew(Long crewId, CrewSaveReqDto crewSaveReqDto, MultipartFile image) {
         // 해당 모임이 존재하는지 검증
         Crew crew = crewRepository.findByCrewIdAndStatus(crewId, 1)
                 .orElseThrow(() -> new CustomException(ErrorCode.CREW_NOT_FOUND));
@@ -143,7 +144,7 @@ public class CrewServiceImpl implements CrewService {
         // DB 수정
         Crew updateCrew = crewRepository.save(crew);
 
-        return CrewDto.CrewSaveRespDto.builder().crew(updateCrew).build();
+        return CrewSaveRespDto.builder().crew(updateCrew).build();
     }
 
     // 모임 삭제
@@ -158,10 +159,10 @@ public class CrewServiceImpl implements CrewService {
     }
 
     // 특정 모임 조회
-    public CrewDto.CrewSelectRespDto getCrewByCrewId(Long crewId) {
+    public CrewSelectRespDto getCrewByCrewId(Long crewId) {
         Crew crew = crewRepository.findByCrewIdAndStatus(crewId, 1)
                 .orElseThrow(() -> new CustomException(ErrorCode.CREW_NOT_FOUND));
-        return CrewDto.CrewSelectRespDto.builder().crew(crew).build();
+        return CrewSelectRespDto.builder().crew(crew).build();
     }
 
     // 모임 가입 신청
@@ -193,7 +194,7 @@ public class CrewServiceImpl implements CrewService {
 
     // 관심사 별 모임 조회
     @Override
-    public List<CrewDto.CrewSelectRespDto> getAllCrewByInterest(String city, Long interestBigId, Long interestSmallId, int page) {
+    public List<CrewSelectRespDto> getAllCrewByInterest(String city, Long interestBigId, Long interestSmallId, int page) {
         // 검증
         validateInputs(city, interestBigId, interestSmallId);
 
@@ -216,19 +217,20 @@ public class CrewServiceImpl implements CrewService {
         }
 
         return crews.stream()
-                .map(CrewDto.CrewSelectRespDto::new)
-                .collect(Collectors.toList());
+                .map(CrewSelectRespDto::new)
+                .toList();
     }
 
+    // 조회 유효성 검사
     private void validateInputs(String city, Long interestBigId, Long interestSmallId) {
-        if (city != null) {
-            geoRepository.findFirstByCity(city).orElseThrow(() -> new CustomException(ErrorCode.GEO_NOT_FOUND));
+        if (city != null && !geoRepository.existsByCity(city)) {
+            throw new CustomException(ErrorCode.GEO_NOT_FOUND);
         }
-        if (interestBigId != null) {
-            interestBigRepository.findById(interestBigId).orElseThrow(() -> new CustomException(ErrorCode.INTEREST_BIG_NOT_FOUND));
+        if (interestBigId != null && !interestBigRepository.existsById(interestBigId)) {
+            throw new CustomException(ErrorCode.INTEREST_BIG_NOT_FOUND);
         }
-        if (interestSmallId != null) {
-            interestSmallRepository.findById(interestSmallId).orElseThrow(() -> new CustomException(ErrorCode.INTEREST_SMALL_NOT_FOUND));
+        if (interestSmallId != null && !interestSmallRepository.existsById(interestSmallId)) {
+            throw new CustomException(ErrorCode.INTEREST_SMALL_NOT_FOUND);
         }
         if ((interestBigId == null && interestSmallId == null) || (interestBigId != null && interestSmallId != null)) {
             throw new CustomException(ErrorCode.CREW_BAD_REQUEST);
@@ -236,28 +238,32 @@ public class CrewServiceImpl implements CrewService {
     }
 
     // 특정 모임의 모임원 조회
-    public List<CrewMemberDto.CrewMemberSelectRespDto> getCrewMemberByCrewId(Long crewId) {
-        Crew crew = crewRepository.findByCrewIdAndStatus(crewId, 1)
-                .orElseThrow(() -> new CustomException(ErrorCode.CREW_NOT_FOUND));
+    public List<CrewMemberSelectRespDto> getCrewMemberByCrewId(Long crewId) {
+        // 유효한 모임인지 검증
+        if (!crewRepository.existsByCrewIdAndStatus(crewId, 1)) {
+            throw new CustomException(ErrorCode.CREW_NOT_FOUND);
+        }
 
         List<Integer> statusList = Arrays.asList(1, 2, 3);
         List<CrewMember> crewMembers = crewMemberRepository.findByCrew_CrewIdAndStatusInOrderByStatusDesc(crewId, statusList);
 
         return crewMembers.stream()
-                .map(CrewMemberDto.CrewMemberSelectRespDto::new)
-                .collect(Collectors.toList());
+                .map(CrewMemberSelectRespDto::new)
+                .toList();
     }
 
     // 특정 모임의 가입신청 조회
-    public List<CrewMemberDto.CrewMemberSelectRespDto> getSignUpMemberByCrewId(Long crewId) {
-        Crew crew = crewRepository.findByCrewIdAndStatus(crewId, 1)
-                .orElseThrow(() -> new CustomException(ErrorCode.CREW_NOT_FOUND));
+    public List<CrewMemberSelectRespDto> getSignUpMemberByCrewId(Long crewId) {
+        // 유효한 모임인지 검증
+        if (!crewRepository.existsByCrewIdAndStatus(crewId, 1)) {
+            throw new CustomException(ErrorCode.CREW_NOT_FOUND);
+        }
 
         List<CrewMember> crewMembers = crewMemberRepository.findByCrew_CrewIdAndStatus(crewId, 4);
 
         return crewMembers.stream()
-                .map(CrewMemberDto.CrewMemberSelectRespDto::new)
-                .collect(Collectors.toList());
+                .map(CrewMemberSelectRespDto::new)
+                .toList();
     }
 
 }
